--- a/package.json
+++ b/package.json
@@ -2,15 +2,13 @@
   "name": "herokuchat",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cross-env": "^7.0.2",
-    "express": "^4.17.1",
-    "socket.io": "^2.3.0"
+    "express": "^4.17.1"
   }
 }
